now prints test completion/fail speed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "string.h": "c",
     "stdio.h": "c",
-    "math.h": "c"
+    "math.h": "c",
+    "strings.h": "c"
   }
 }
