fixed base_16_to_decimal.c and added more tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "string.h": "c",
     "stdio.h": "c",
     "math.h": "c",
-    "strings.h": "c"
+    "strings.h": "c",
+    "base_16_to_decimal.h": "c"
   }
 }
