added base multiplication

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "stdio.h": "c",
     "math.h": "c",
     "strings.h": "c",
-    "base_16_to_decimal.h": "c"
+    "base_16_to_decimal.h": "c",
+    "base_to_decimal.h": "c"
   }
 }
